<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterHobby"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="580dp"
        android:text="Select your hobbies by tapping on them"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gaming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="43dp"
        android:text="@string/gaming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="83dp"
        android:text="@string/reading"
        app:layout_constraintEnd_toStartOf="@+id/cycling"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/gym"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="94dp"
        android:text="@string/gym"
        app:layout_constraintEnd_toStartOf="@+id/netflix"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/reading"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/cycling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="16dp"
        android:text="@string/cycling"
        app:layout_constraintStart_toEndOf="@+id/reading"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/netflix"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="38dp"
        android:text="@string/netflix"
        app:layout_constraintBottom_toTopOf="@+id/travel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/programming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="48dp"
        android:text="@string/programming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reading"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/hiking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="102dp"
        android:text="@string/hiking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/programming"
        app:layout_constraintTop_toBottomOf="@+id/cycling"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/swimming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="37dp"
        android:text="@string/swimming"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reading"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/party"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="89dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="97dp"
        android:text="@string/party"
        app:layout_constraintEnd_toStartOf="@+id/travel"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/swimming"
        app:layout_constraintTop_toBottomOf="@+id/gym"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="19dp"
        android:text="@string/travelling"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/netflix"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/diy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="96dp"
        android:text="@string/diy"
        app:layout_constraintEnd_toStartOf="@+id/party"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swimming"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/selectHobbies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="268dp"
        android:text="@string/selected_hobbies"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- SELECTED HOBBIES -->

    <TextView
        android:id="@+id/netflixOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="33dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/gymOn"
        app:layout_constraintEnd_toStartOf="@+id/readingOn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/travelOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/hikingOn"
        app:layout_constraintEnd_toStartOf="@+id/readingOn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/readingOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="33dp"
        app:layout_constraintBottom_toTopOf="@+id/cyclingOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/travelOn" />

    <TextView
        android:id="@+id/swimmingOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/partyOn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/travelOn" />

    <TextView
        android:id="@+id/gymOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/gamingOn"
        app:layout_constraintEnd_toStartOf="@+id/hikingOn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/hikingOn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="448dp"
        app:layout_constraintEnd_toStartOf="@+id/cyclingOn"
        app:layout_constraintStart_toEndOf="@+id/gymOn"
        app:layout_constraintTop_toBottomOf="@+id/travelOn" />

    <TextView
        android:id="@+id/cyclingOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/programmingOn"
        app:layout_constraintEnd_toStartOf="@+id/partyOn"
        app:layout_constraintStart_toEndOf="@+id/hikingOn" />

    <TextView
        android:id="@+id/partyOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cyclingOn" />

    <TextView
        android:id="@+id/gamingOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="134dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/diyOn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/diyOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@+id/programmingOn"
        app:layout_constraintStart_toEndOf="@+id/gamingOn"
        app:layout_constraintTop_toBottomOf="@+id/hikingOn" />

    <TextView
        android:id="@+id/programmingOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="47dp"
        app:layout_constraintBottom_toTopOf="@+id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/diyOn" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="submit"
        android:backgroundTint="@color/pink"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>