<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterDetails"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="70dp"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- NAME -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Name"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName"
                android:paddingTop="16dp"
                android:paddingBottom="16dp" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        &lt;!&ndash; LAST NAME &ndash;&gt;-->

<!--        <com.google.android.material.textfield.TextInputLayout-->
<!--            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="15dp"-->
<!--            android:hint="Last name"-->
<!--            android:id="@+id/surnameIL"-->
<!--            app:startIconDrawable="@drawable/ic_baseline_person_24">-->

<!--            <com.google.android.material.textfield.TextInputEditText-->
<!--                android:id="@+id/surnameET"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"-->
<!--                android:inputType="textPersonName"-->
<!--                android:paddingTop="16dp"-->
<!--                android:paddingBottom="16dp" />-->

<!--        </com.google.android.material.textfield.TextInputLayout>-->

        <!-- EMAIL -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nickInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:hint="Nickname"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- OCCUPATION -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Occupation"
            app:startIconDrawable="@drawable/ic_occupation">

            <AutoCompleteTextView
                android:id="@+id/occupationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="Occupation"
                android:scrollbars="vertical"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- GENDER -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/gender"
            app:startIconDrawable="@drawable/ic_gender">

            <AutoCompleteTextView
                android:id="@+id/genderInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:text="@string/gender"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- INTEREST -->

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/interest"
            app:startIconDrawable="@drawable/ic_interest">

            <AutoCompleteTextView
                android:id="@+id/interestInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="none"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/interest"
                android:scrollbars="vertical" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="Date of Birth"
            app:startIconDrawable="@drawable/ic_calendar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/birthInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:focusable="false"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="Date of Birth"/>

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/pink"
            android:text="@string/nextBtn"
            android:textColor="@color/black"
            tools:text="Next" />


    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/form"
        android:textColor="#4E342E"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>